syntax = "proto3";

option csharp_namespace = "auth_service";

package auth;

// The greeting service definition.
service AuthService {
  // Sends a greeting
  rpc Verify (VerifyRequest) returns (VerifyResponse);
}

// The request message containing the user's name.
message VerifyRequest {
  string name = 1;
}

// The response message containing the greetings.
message VerifyResponse {
  string message = 1;
}
